# gleif-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GLEIF API.postman_collection.json  LICENSE  README.md  example_response.json  typos.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.yml  instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-question.yml  4-documentation_improvement.yml  config.yml
.github/workflows/: cd.yml  ci.yml  security-audit.yml
scripts/: fetch_samples.sh  test-ci.sh
src/: client.rs  endpoint.rs  error.rs  field.rs  lib.rs  main.rs  request_builder.rs  test_utils.rs  value.rs
src/api/: client.rs  error.rs  mod.rs  request_builder.rs  throttler.rs
src/endpoint/: auto_completion.rs  country.rs  entity_legal_form.rs  field.rs  field_modification.rs  fuzzy_completion.rs  isin.rs  jurisdiction.rs  lei_issuer.rs  lei_record.rs  metadata.rs  mod.rs  official_organizational_role.rs  region.rs  registration_agent.rs  registration_authority.rs  relationship_record.rs  reporting_exception.rs  vlei_issuer.rs
src/model/: api_response.rs  auto_completion.rs  common.rs  country.rs  data.rs  entity_legal_form.rs  enums.rs  field.rs  field_modification.rs  fuzzy_completion.rs  isin.rs  jurisdiction.rs  lei_issuer.rs  lei_record.rs  links.rs  meta.rs  mod.rs  official_organizational_role.rs  region.rs  registration_agent.rs  registration_authority.rs  relationship_record.rs  reporting_exception.rs  vlei_issuer.rs
tests/: lei_records.rs
tests/data/auto_completions/: autocompletions_all.json
tests/data/countries/: countries_all.json  country_DE.json  country_GB.json  country_US.json
tests/data/entity_legal_forms/: entity_legal_form_10UR.json  entity_legal_form_12N6.json  entity_legal_form_1VTA.json  entity_legal_forms_all.json
tests/data/field_modifications/: field_modifications_21380068P1DRHMJ8KU70.json  field_modifications_254900LNRYNOQ9YPU758.json  field_modifications_254900MSZM6DMP853B11.json  field_modifications_335800CCCPHKUOXPC332.json  field_modifications_5299001ERX0K10IZUL40.json  field_modifications_529900GRZ2BQY5ZM9N49.json  field_modifications_5493001KJTIIGC8Y1R12.json  field_modifications_549300O897ZC5H7CY412.json  field_modifications_549300YX4S1LLSMK2627.json  field_modifications_851WYGNLUQLFZBSYGB56.json  field_modifications_984500983AD71E4FBC41.json  field_modifications_INR2EJN1ERAN0W5ZP974.json
tests/data/fields/: field_ISIN_MAPPING_CODE.json  field_LEIREC_ENTITY_STATUS.json  field_LEIREC_LEGAL_NAME.json  fields_all.json
tests/data/fuzzy_completions/: fuzzycompletions_all.json
tests/data/isins/: isins_21380068P1DRHMJ8KU70.json  isins_254900LNRYNOQ9YPU758.json  isins_254900MSZM6DMP853B11.json  isins_335800CCCPHKUOXPC332.json  isins_5299001ERX0K10IZUL40.json  (+7 more)
(+136 files in other folders)
