[package]
name = "gleif-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
reqwest-retry = "0.7"
