[package]
name = "gleif-rs"
description = "A Rust client for interacting with the GLEIF API and parsing LEI records."
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/NotAProfDev/gleif-rs"
homepage = "https://github.com/NotAProfDev/gleif-rs"
documentation = "https://docs.rs/gleif-rs"
authors = ["NotAProfDev <84450364+NotAProfDev@users.noreply.github.com>"]
readme = "README.md"
categories = ["api-bindings", "data-structures", "finance"]
keywords = ["gleif", "lei", "api", "client", "finance"]

[dependencies]
url = "2.5.4"
reqwest = { version = "0.12.18", features = ["json"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
reqwest-retry = "0.7"
tokio = { version = "1.45.1", features = ["full"] }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
[lints.rust]
missing_docs = "warn"
non_ascii_idents = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"

# https://rust-lang.github.io/rust-clippy/master/
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
